Fix confirmation num spacing

--- a/styles/confirmation.scss
+++ b/styles/confirmation.scss
@@ -26,11 +26,9 @@ iframe {
   border: solid 7px #246160;
 }
 .confirmation-num {
-  display: flex;
   justify-content: center;
 }
 .pickup-time {
-  display: flex;
   justify-content: center;
 }
 
